run and rename notebook

--- a/nbs/1. Top Ranked Strategies.ipynb
+++ b/nbs/1. Top Ranked Strategies.ipynb
@@ -17,13 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import dask.dataframe as dd\n",
-    "\n",
-    "import imp\n",
-    "\n",
-    "prepare_data = imp.load_source('prepare_data', '../src/prepare_data.py')\n",
-    "process_data = imp.load_source('processe_data', '../src/process_data.py')"
+    "import pandas as pd"
    ]
   },
   {
