--- a/paper/performance_merged_table.tex
+++ b/paper/performance_merged_table.tex
@@ -1,20 +1,21 @@
 \begin{tabular}{lr}
 \toprule
-Name                       &         \(\bar{r}\)\\
+{} &  Normalized\_Rank \\
+Name                       &                  \\
 \midrule
 Limited Retaliate 3        &            0.286 \\
-Retaliate 3                &            0.296 \\
+Retaliate 3                &            0.297 \\
 Retaliate 2                &            0.302 \\
-Limited Retaliate 2        &            0.303 \\
-Limited Retaliate          &            0.310 \\
+Limited Retaliate 2        &            0.304 \\
+Limited Retaliate          &            0.311 \\
 Retaliate                  &            0.317 \\
 BackStabber                &            0.324 \\
 DoubleCrosser              &            0.331 \\
-Nice Meta Winner           &            0.349 \\
-PSO Gambler 2 2 2 Noise 05 &            0.351 \\
+Nice Meta Winner           &            0.350 \\
+PSO Gambler 2\_2\_2 Noise 05 &            0.351 \\
 Grudger                    &            0.352 \\
-Evolved HMM 5              &            0.357 \\
 NMWE Memory One            &            0.357 \\
+Evolved HMM 5              &            0.358 \\
 Nice Meta Winner Ensemble  &            0.359 \\
 Forgetful Fool Me Once     &            0.359 \\
 \bottomrule
