--- a/nbs/0.0.1 Output to tables.ipynb
+++ b/nbs/0.0.1 Output to tables.ipynb
@@ -563,6 +563,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Combine tables**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "four_types = pd.read_csv('../paper/correlation_table_four_types.tex',\n",
+    "                 sep='&',\n",
+    "                 header=None,\n",
+    "                 skiprows=4,\n",
+    "                 skipfooter=2,\n",
+    "                 engine='python')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "four_types[8] = [float(val.split('\\\\\\\\')[0]) for val in four_types[8]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged = pd.read_csv('../paper/correlation_table_merged.tex',\n",
+    "                 sep='&',\n",
+    "                 header=None,\n",
+    "                 skiprows=4,\n",
+    "                 skipfooter=2,\n",
+    "                 engine='python')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged[2] = [float(val.split('\\\\\\\\')[0]) for val in merged[2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = pd.concat([four_types, merged[[1, 2]]], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.index = table[0].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = table.drop([0], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.columns = [r'$r$' if i % 2 == 0 else 'median score' for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "head = \"\"\"\\\\begin{tabular}{lggccggccggg}\n",
+    "    \\\\toprule\n",
+    "    &  \\multicolumn{2}{g}{Standard} & \\multicolumn{2}{c}{Noisy} & \\multicolumn{2}{g}{Probabilistic ending} &  \\multicolumn{2}{c}{Noisy probabilistic ending} &  \\multicolumn{2}{g}{Overall} \\\\\\ \\n \\midrule\\n\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_to_write = table.to_latex().replace('\\\\begin{tabular}{llllllllrrr}\\n\\\\toprule\\n', head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "textfile = open('../paper/correlations_table.tex', 'w')\n",
+    "textfile.write(table_to_write.replace('NaN', '  -').replace('\\$', '$').replace('\\_', '_').replace('\\{', '{').replace('\\}', '}'))\n",
+    "textfile.close()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
