--- a/paper/main.tex
+++ b/paper/main.tex
@@ -97,8 +97,8 @@ has been of interest to the scientific community since the formulation of the
 game in 1950~\cite{Flood1958}. Following the computer tournaments of R. Axelrod in the
 1980's~\cite{Axelrod1980a, Axelrod1980b}, a strategy's performance in a round
 robin computer tournament became a common evaluation technique for newly designed
-strategies. Many tournaments have followed Axelrod's~\cite{Bendor1991, Beaufils1997, Stephens2002,
-Kendall2007, Stewart2012, Harper2017} and today more hundreds of strategies exist  % TODO Order these citations
+strategies. Many tournaments have followed Axelrod's~\cite{Beaufils1997, Bendor1991,
+Harper2017, Kendall2007, Stephens2002, Stewart2012} and today more hundreds of strategies exist
 in the literature.
 
 The winner of both of R. Axelrod's tournaments~\cite{Axelrod1980a, Axelrod1980b}
